Styled logo so it no longer stretched

--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ h4 {
   justify-content: center;
 }
 
+#logo {
+  width: 150px;
+}
+
 #mission-text {
   opacity: 1;
   flex-basis: 1200px;
